<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalbck"
    android:gravity="center"
    tools:context="com.example.kym.FrontActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="53dp"
        android:gravity="center"
        android:text="Know Your Market"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtReg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_style_hybrid"
        android:height="50dp"
        android:onClick="@string/clickTutorial"
        android:text="Stock Market Tutorial" />

    <TextView
        android:id="@+id/txtReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="170dp"
        android:layout_marginLeft="49dp"
        android:onClick="@string/tRegistration"
        android:text="Register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtReg"
        android:layout_alignBottom="@+id/txtReg"
        android:layout_alignParentRight="true"
        android:layout_marginRight="64dp"
        android:onClick="@string/tL"
        android:text="Login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>

