<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playsplash"
    tools:context="com.example.kym.GameSplashActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textViewfp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="14dp"
        android:text="About Us"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewfp"
        android:layout_alignBottom="@+id/textViewfp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="Instruction"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginRight="22dp"
        android:layout_marginTop="85dp"
        android:onClick="@string/onClickInst"
        android:src="@drawable/note" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView2"
        android:onClick="@string/onClickAbout"
        android:src="@drawable/aboutus" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:onClick="@string/onClickPlay"
        android:src="@drawable/playgame" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="Play Game!!"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>

